@@ -48,14 +48,14 @@ class TestFileApp(unittest.TestCase):
         self.assertEqual(resp2.last_modified.timetuple(), gmtime(getmtime(self.tempfile)))
 
         resp3 = get_response(app, range=(7, 11))
-        self.assertEqual(resp3.status_int, 206)
+        self.assertEqual(resp3.status_code, 206)
         self.assertEqual(tuple(resp3.content_range)[:2], (7, 11))
         self.assertEqual(resp3.last_modified.timetuple(), gmtime(getmtime(self.tempfile)))
         self.assertEqual(resp3.body, bytes_('this'))
 
     def test_unexisting_file(self):
         app = static.FileApp('/tmp/this/doesnt/exist')
-        self.assertEqual(404, get_response(app).status_int)
+        self.assertEqual(404, get_response(app).status_code)
 
     def test_allowed_methods(self):
         app = static.FileApp(self.tempfile)
@@ -63,11 +63,11 @@ class TestFileApp(unittest.TestCase):
         # Alias
         resp = lambda method: get_response(app, method=method)
 
-        self.assertEqual(200, resp(method='GET').status_int)
-        self.assertEqual(200, resp(method='HEAD').status_int)
-        self.assertEqual(405, resp(method='POST').status_int)
+        self.assertEqual(200, resp(method='GET').status_code)
+        self.assertEqual(200, resp(method='HEAD').status_code)
+        self.assertEqual(405, resp(method='POST').status_code)
         # Actually any other method is not allowed
-        self.assertEqual(405, resp(method='xxx').status_int)
+        self.assertEqual(405, resp(method='xxx').status_code)
 
     def test_exception_while_opening_file(self):
         # Mock the built-in ``open()`` function to allow finner control about
@@ -81,10 +81,10 @@ class TestFileApp(unittest.TestCase):
         app = static.FileApp(self.tempfile)
 
         app._open = open_ioerror
-        self.assertEqual(403, get_response(app).status_int)
+        self.assertEqual(403, get_response(app).status_code)
 
         app._open = open_oserror
-        self.assertEqual(403, get_response(app).status_int)
+        self.assertEqual(403, get_response(app).status_code)
 
 
 class TestFileIter(unittest.TestCase):
@@ -149,17 +149,17 @@ class TestDirectoryApp(unittest.TestCase):
 
     def test_empty_directory(self):
         app = static.DirectoryApp(self.test_dir)
-        self.assertEqual(404, get_response(app).status_int)
-        self.assertEqual(404, get_response(app, '/foo').status_int)
+        self.assertEqual(404, get_response(app).status_code)
+        self.assertEqual(404, get_response(app, '/foo').status_code)
 
     def test_serve_file(self):
         app = static.DirectoryApp(self.test_dir)
         create_file('abcde', self.test_dir, 'bar')
-        self.assertEqual(404, get_response(app).status_int)
-        self.assertEqual(404, get_response(app, '/foo').status_int)
+        self.assertEqual(404, get_response(app).status_code)
+        self.assertEqual(404, get_response(app, '/foo').status_code)
 
         resp = get_response(app, '/bar')
-        self.assertEqual(200, resp.status_int)
+        self.assertEqual(200, resp.status_code)
         self.assertEqual(bytes_('abcde'), resp.body)
 
     def test_dont_serve_file_in_parent_directory(self):
@@ -173,14 +173,14 @@ class TestDirectoryApp(unittest.TestCase):
         app = static.DirectoryApp(serve_path)
 
         # The file exists, but is outside the served dir.
-        self.assertEqual(403, get_response(app, '/../bar').status_int)
+        self.assertEqual(403, get_response(app, '/../bar').status_code)
 
     def test_file_app_arguments(self):
         app = static.DirectoryApp(self.test_dir, content_type='xxx/yyy')
         create_file('abcde', self.test_dir, 'bar')
 
         resp = get_response(app, '/bar')
-        self.assertEqual(200, resp.status_int)
+        self.assertEqual(200, resp.status_code)
         self.assertEqual('xxx/yyy', resp.content_type)
 
     def test_file_app_factory(self):
